# filament

./: .build.sh.un~  .clang-format  .clang-tidy  .cursorrules  .dir-locals.el  .editorconfig  .gitignore  .gitmodules  .travis.yml  AGENTS.md  BRANCHING.md  BUILDING.md  CMakeLists.txt  CODEOWNERS  CODE_STYLE.md  CONTRIBUTING.md  LICENSE  LIGHT_COOKIES.md  NEW_RELEASE_NOTES.md  PLAN.md  README.md  RELEASE_GUIDE.md  RELEASE_NOTES.md  book.toml  build.sh  filamentConfig.cmake.in  flake.nix  lldb_cmds.txt  shell.nix
HighlevelAPIs/VizAPIs_Linux/: CMakeLists.txt  build.sh
android/filamat-android/: CMakeLists.txt  build.gradle  gradle.properties  libfilamat-jni.map  settings.gradle
android/filament-android/: .gitignore  CMakeLists.txt  build.gradle  gradle.properties  libfilament-jni.map  proguard-rules.pro  settings.gradle
android/filament-utils-android/: CMakeLists.txt  build.gradle  gradle.properties  libfilament-utils-jni.map
android/gltfio-android/: CMakeLists.txt  build.gradle  gradle.properties  libgltfio-jni.map  libgltfio-jni.symbols  settings.gradle
cfilament/: CMakeLists.txt
cfilament/include/: cfilament.h
cfilament/src/: API.h  Camera.cpp  Colors.cpp  Engine.cpp  EntityManager.cpp  Fence.cpp  IndexBuffer.cpp  IndirectLight.cpp  LightManager.cpp  Material.cpp  MaterialInstance.cpp  RenderableManager.cpp  Renderer.cpp  Scene.cpp  SkyBox.cpp  Stream.cpp  Texture.cpp  TextureSampler.cpp  TransformManager.cpp  VertexBuffer.cpp  View.cpp
filament/: CMakeLists.txt  README.md
filament/backend/: CMakeLists.txt
filament/benchmark/: CMakeLists.txt  PerformanceCounters.h  README.md  benchmark_BufferAllocator.cpp  benchmark_filament.cpp
filament/docs/: Debugging.md  SpirvDebugging.md  Versioning.md  Vulkan.md.html
filament/fuzzing/: README.md  material_parser_fuzzer.cpp
filament/src/: ACES.h  Allocators.h  AtlasAllocator.cpp  AtlasAllocator.h  Bimap.h  Box.cpp  BufferObject.cpp  BufferPoolAllocator.h  BufferStuffingDetector.h  Cache.h  Camera.cpp  Color.cpp  ColorGrading.cpp  ColorSpace.cpp  ColorSpace.h  ColorSpaceUtils.cpp  ColorSpaceUtils.h  Culler.cpp  Culler.h  DFG.cpp  DFG.h  DebugRegistry.cpp  DynamicSpecConstKey.cpp  DynamicSpecConstKey.h  Engine.cpp  Exposure.cpp  Fence.cpp  FilamentAPI-impl.h  FilamentBuilder.cpp  FrameGraphRenderPass.cpp  FrameHistory.h  FrameInfo.cpp  FrameInfo.h  FramePacer.cpp  FramePipelineEstimator.cpp  FrameSkipper.cpp  FrameSkipper.h  Froxel.cpp  Froxelizer.cpp  Froxelizer.h  (+94 more)
filament/test/: CMakeLists.txt  MockDriver.h  compiler_test.cpp  depth_test.cpp  filament_AtlasAllocator_test.cpp  filament_benchmark.cpp  filament_bimap_test.cpp  filament_calls.cpp  filament_framegraph_test.cpp  filament_rendering_test.cpp  filament_test.cpp  filament_test_exposure.cpp  filament_test_material.cpp  filament_test_material_parser.cpp  sandboxTransformName.mat  test_AllocationStrategy.cpp  test_AllocationStrategyStress.cpp  test_BufferAllocator.cpp  test_BufferAllocatorStress.cpp  test_BufferStuffingDetector.cpp  test_CircularQueue.cpp  test_ClearColorValue.cpp  test_FenceManager.cpp  test_FramePacer.cpp  test_SubAllocator.cpp  test_SubAllocatorStress.cpp  test_UboManager.cpp  test_Variant.cpp  test_VertexBuffer.cpp  test_compact.cpp  test_framerate.cpp  test_material.filamat  test_material_transformname.filamat  update_test_material.sh
filament/tools/: CMakeLists.txt  ssaogen.cpp
java/filamat/: CMakeLists.txt
java/filament/: CMakeLists.txt
java/gltfio/: CMakeLists.txt
libs/astrict/: CMakeLists.txt
libs/bluegl/: .gitignore  CMakeLists.txt  README.md  bluegl-gen.py
libs/bluevk/: CMakeLists.txt  README.md  bluevk-gen.py
libs/camutils/: CMakeLists.txt
libs/fgdbg/: CMakeLists.txt  README.md
libs/fgviewer/: CMakeLists.txt  README.md
libs/filabridge/: CMakeLists.txt
libs/filaflat/: CMakeLists.txt
libs/filagui/: CMakeLists.txt
libs/filamat/: CMakeLists.txt  README.md
libs/filament-matp/: CMakeLists.txt
libs/filamentapp/: CMakeLists.txt
libs/filamentjs/: CMakeLists.txt  extensions.js  jsbindings.cpp  jsenums.cpp  utilities.js  wasmloader.js
libs/filameshio/: CMakeLists.txt
samples/: CMakeLists.txt  animation.cpp  arealight.cpp  depthtesting.cpp  frame_generator.cpp  gltf_animation.cpp  gltf_baker.cpp  gltf_instances.cpp  gltf_viewer.cpp  heightfield.cpp  helloasync.cpp  hellomorphing.cpp  hellopbr.cpp  helloskinning.cpp  helloskinningbuffer.cpp  helloskinningbuffer_morebones.cpp  hellosphere.cpp  hellostereo.cpp  hellotriangle.cpp  hellouvmorphing.cpp  helper.h  helper.mm  hybrid_instancing.cpp  image_viewer.cpp  issue_9062_repro.cpp  lightbulb.cpp  loadfilamat.cpp  lucy_bloom.cpp  lucy_utils.cpp  lucy_utils.h  material_sandbox.cpp  material_sandbox.h  material_sandbox.py  material_sandbox_shared.cpp  material_testbed.cpp  materialinstancestress.cpp  multiple_windows.cpp  mutable_constants.cpp  point_sprites.cpp  procedural_effect.cpp  (+31 more)
samples/app/: CameraManipulator.cpp  CameraManipulator.h  Config.h  Cube.cpp  Cube.h  FilamentApp.cpp  FilamentApp.h  GltfMeshAssimp.cpp  GltfMeshAssimp.h  IBL.cpp  IBL.h  IcoSphere.cpp  IcoSphere.h  Image.cpp  MeshAssimp.cpp  MeshAssimp.h  MeshIO.cpp  MeshIO.h  NativeWindowHelper.h  NativeWindowHelperCocoa.mm  NativeWindowHelperLinux.cpp  NativeWindowHelperWindows.cpp  Sphere.cpp  Sphere.h
samples/common/: SampleConfig.h  arguments.cpp  arguments.h  configuration.cpp  configuration.h
samples/envs/: README  README.md
samples/materials/: aiDefaultMat.mat  aoPreview.mat  bakedColor.filamat  bakedColor.mat  bakedColorWithMutableConstants.mat  bakedTexture.mat  depthVisualizer.mat  gltf2.mat  gltf2DoubleSided.mat  gltf2DoubleSidedMasked.mat  gltf2DoubleSidedTrans.mat  gltf2DoubleSidedUnlit.mat  gltf2Masked.mat  gltf2Trans.mat  gltf2Unlit.mat  groundShadow.mat  heightfield.mat  iconTest.mat  image.mat  mirror.mat  normalColor.mat  overdraw.mat  pointSprites.mat  proceduralEffect.mat  proceduralTextureQuad.mat  sandboxCloth.mat  sandboxLit.mat  sandboxLitFade.mat  sandboxLitSolidRefraction.mat  sandboxLitSolidRefractionSsr.mat  sandboxLitThinRefraction.mat  (+8 more)
shaders/: CMakeLists.txt
(+6064 files in other folders)
